--- a/.config/emacs/user-interface.org
+++ b/.config/emacs/user-interface.org
@@ -3,7 +3,8 @@
 * Theming
 Set the default font to the Source Code Pro nerd font variant. I use size 14 font.
 #+begin_src emacs-lisp :tangle ~/.config/emacs/user-interface.el :mkdirp yes
-  (set-face-attribute 'default t :font "SauceCodePro Nerd Font-14")
+  (add-to-list 'default-frame-alist
+               '(font . "SauceCodePro Nerd Font-14"))
 #+end_src
 
 Use the Doom Nord light theme.
