--- a/.config/skhd/skhdrc.org
+++ b/.config/skhd/skhdrc.org
@@ -11,7 +11,9 @@ Add keybinding for killing a window.
 #+end_src
 
 Add keybinding for opening an app launcher.
-# TODO
+#+begin_src conf :tangle ~/.config/skhd/skhdrc :mkdirp yes
+  cmd - d : ls /Applications/ /Applications/Utilities/ /System/Applications/ /System/Applications/Utilities/ ~/Applications/ | grep '\.app$' | sed 's/\.app$//g' | choose -f "SauceCodePro Nerd Font" -s 15 -b ece0c9 | xargs -I {} open -a "{}.app"
+#+end_src
 
 Add keybinding for reloading the configuration.
 #+begin_src conf :tangle ~/.config/skhd/skhdrc :mkdirp yes
