--- a/.config/skhd/skhdrc.org
+++ b/.config/skhd/skhdrc.org
@@ -12,7 +12,7 @@ Add keybinding for killing a window.
 
 Add keybinding for opening an app launcher.
 #+begin_src conf :tangle ~/.config/skhd/skhdrc :mkdirp yes
-  cmd - d : ls /Applications/ /Applications/Utilities/ /System/Applications/ /System/Applications/Utilities/ ~/Applications/ | grep '\.app$' | sed 's/\.app$//g' | choose -f "SauceCodePro Nerd Font" -s 15 -b ece0c9 | xargs -I {} open -a "{}.app"
+  cmd - d : ~/.local/bin/launcher
 #+end_src
 
 Add keybinding for reloading the configuration.
