--- a/.config/emacs/feed.org
+++ b/.config/emacs/feed.org
@@ -5,25 +5,18 @@
   :PROPERTIES:
   :ID: elfeed
   :END:
-  ,** http://feeds.feedburner.com/InformationIsBeautiful
-  ,** [[http://orgmode.org][Org Mode Links supported as well]]
-  ,** Software Development                                                 :dev:
-  ,*** Emacs                                                    :emacs:mustread:
-  ,**** http://www.terminally-incoherent.com/blog/feed
-  ,**** http://nullprogram.com/feed
-  ,**** entry-title: \(emacs\|org-mode\)
-  ,**** http://planet.emacsen.org/atom.xml
-  ,**** [[toobnix:154][EmacsConf]]
-  ,*** Web Development                                                     :web:
-  ,**** http://planet.phpunit.de/atom.xml
-  ,**** http://feeds.feedburner.com/symfony/blog
-  ,**** http://feeds.feedburner.com/qooxdoo/blog/content
-  ,*** Eclipse                                                         :eclipse:
-  ,**** http://blog.eclipse-tips.com/feeds/posts/default?alt=rss
-  ,**** http://ed-merks.blogspot.com/feeds/posts/default
-       A description of a feed can be written under any headline.
-       The text will be ignored by elfeed.
-  ,**** http://feeds.feedburner.com/eclipselive                         :ignore:
-  ,**** http://www.fosslc.org/drupal/rss.xml                             :video:
-  ,#+link: toobnix https://toobnix.org/feeds/videos.xml?videoChannelId=
+  ,** Software :software:
+  ,*** [[https://pluralistic.net/feed/][Cory Doctorow's Blog]] :politics:fiction:
+  ,*** [[https://maia.crimew.gay/feed.xml][Maia Crimew's Blog]] :internet:politics:
+  ,*** [[https://drewdevault.com/blog/index.xml][Drew DeVault's Blog]]
+  ,** Comics :comic:
+  ,*** [[https://xkcd.com/atom.xml][XKCD]]
+  ,** People I know
+  ,*** [[https://pinkish.bearblog.dev/feed/][Pinkish's Blog]] :software:
+  ,*** [[https://jjanzen.ca/rss.xml][Me]] :software:review:
+  ,** Internet Infrastructure :internet:software:
+  ,*** [[https://daniel.haxx.se/blog/feed/][cURL Blog]]
+  ,*** [[https://blog.archive.org/feed/][Archive.org Blog]]
+  ,** Reviews :review:
+  ,*** [[https://mountainofink.com/?format=rss][Mountain of Ink]]
 #+end_src
