--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 echo 'backing up previous log file to ~/.update-home-old.log'
-mv ~/.update-home.log ~/.update-home-old.log &>> /dev/null
+mv ~/.update-home.log ~/.update-home-old.log >> /dev/null 2>&1
 
 if ! test -d ~/.dotfiles; then
     echo '.dotfiles should be at ~/.dotfiles; reinstalling dotfiles at ~/.dotfiles...'
