--- a/common/.config/emacs/feed.org
+++ b/common/.config/emacs/feed.org
@@ -5,18 +5,32 @@
   :PROPERTIES:
   :ID: elfeed
   :END:
+  ,** Journalism
+  ,*** [[https://waxy.org/feed/][Waxy.org]]
+  ,*** [[https://pluralistic.net/feed/][Cory Doctorow]] :technology:software:fiction:
+  ,** Computer Science :cs:
+  ,*** [[https://a.exozy.me/index.xml][Some Random Website]] :math:algorithms:fiction:
+  ,** Technology :technology:
+  ,*** [[https://ciechanow.ski/atom.xml][Bartosz Ciechanowshki]]
+  ,*** [[https://www.citationneeded.news/rss/][Citation Needed]]
+  ,*** [[https://www.lilysthings.org/blog/rss.xml][The Cool Blog]]
   ,** Software :software:
-  ,*** [[https://pluralistic.net/feed/][Cory Doctorow's Blog]] :politics:fiction:
-  ,*** [[https://maia.crimew.gay/feed.xml][Maia Crimew's Blog]] :internet:politics:
-  ,*** [[https://drewdevault.com/blog/index.xml][Drew DeVault's Blog]]
+  ,*** [[https://ersei.net/en/blog.atom][Ersei]]
+  ,*** [[https://ntietz.com/atom.xml][Technically a Blog]]
+  ,*** [[https://alexwlchan.net/atom.xml][Alex Chan]]
+  ,*** [[https://eaton-works.com/feed.atom][Eaton Works]] :hacking:
+  ,*** [[https://computer.rip/rss.xml][Computer's Are Bad]] :technology:
+  ,*** [[https://mark.stosberg.com/rss/][Mark Stosberg]] :biking:
+  ,*** [[https://maia.crimew.gay/feed.xml][Maia Crimew]] :internet:hacking:
+  ,*** [[https://drewdevault.com/blog/index.xml][Drew DeVault]]
   ,** Comics :comic:
   ,*** [[https://xkcd.com/atom.xml][XKCD]]
   ,** People I know
-  ,*** [[https://pinkish.bearblog.dev/feed/][Pinkish's Blog]] :software:
+  ,*** [[https://pinkish.bearblog.dev/feed/][Pinkish]] :software:
   ,*** [[https://jjanzen.ca/rss.xml][Me]] :software:review:
   ,** Internet Infrastructure :internet:software:
-  ,*** [[https://daniel.haxx.se/blog/feed/][cURL Blog]]
-  ,*** [[https://blog.archive.org/feed/][Archive.org Blog]]
+  ,*** [[https://daniel.haxx.se/blog/feed/][cURL]]
+  ,*** [[https://blog.archive.org/feed/][Archive.org]]
   ,** Reviews :review:
   ,*** [[https://mountainofink.com/?format=rss][Mountain of Ink]]
 #+end_src
