--- a/install
+++ b/install
@@ -29,7 +29,7 @@ else
 fi
 
 echo 'installing configuration files...'
-find -- . -type f -name "*.org" | while read -r file; do
+find -L -- . -type f -name "*.org" | while read -r file; do
     echo "    installing $file..."
     emacs --batch "$file" -f package-initialize --eval '(org-babel-tangle)' >> ~/.update-home.log 2>&1
 done
