--- a/install
+++ b/install
@@ -29,9 +29,15 @@ else
 fi
 
 echo 'installing configuration files...'
-find -L -- . -type f -name "*.org" | while read -r file; do
+find -L -- . -type f -name "*\.org" | while read -r file; do
     echo "    installing $file..."
     emacs --batch "$file" -f package-initialize --eval '(org-babel-tangle)' >> ~/.update-home.log 2>&1
+done
+find -L -- . -type f -name "*\.org\.gpg" | while read -r file; do
+    echo "    installing $file..."
+    gpg -d "$file" > tmp.org
+    emacs --batch tmp.org -f package-initialize --eval '(org-babel-tangle)' >> ~/.update-home.log 2>&1
+    rm tmp.org
 done
 
 echo 'installing wallpaper...'
