--- a/macos/Applications/Emacs.app/Contents/MacOS/Emacs.org
+++ b/macos/Applications/Emacs.app/Contents/MacOS/Emacs.org
@@ -2,6 +2,8 @@
 
 #+begin_src sh :tangle ~/Applications/Emacs.app/Contents/MacOS/Emacs :mkdirp yes :tangle-mode o755
   #!/bin/sh
-  /opt/homebrew/bin/emacsclient -c &> /dev/null &
-  disown
+  if ! ps -e | grep -q '[E]macs --bg-daemon'; then
+      /opt/homebrew/bin/emacs --daemon
+  fi
+  /opt/homebrew/bin/emacsclient -c &> /dev/null
 #+end_src
