--- a/macos/.config/yabai/yabairc.org
+++ b/macos/.config/yabai/yabairc.org
@@ -61,3 +61,8 @@ Don't manage some apps.
   yabai -m rule --add app="^System Settings$" manage=off
   yabai -m rule --add app="^Calculator$" manage=off
 #+end_src
+
+Make windows management aware of SketchyBar.
+#+begin_src sh :tangle ~/.config/yabai/yabairc :mkdirp yes
+  yabai -m config external_bar all:$(sketchybar --query bar | jq .height):0
+#+end_src
