move nixos to org

--- a/install
+++ b/install
@@ -48,7 +48,9 @@ fi
 
 if [ "$(uname)" = 'Linux' ] && grep -q 'ID=nixos' /etc/os-release; then
     echo 'installing NixOS flake'
-    sudo nixos-rebuild switch --flake './.flake#nixos'
+    cp ./.flake/system/hardware-configuration.nix ~/.flake
+    cp ./.flake/flake.lock ~/.flake
+    sudo nixos-rebuild switch --flake '~/.flake#nixos'
 fi
 
 if [ "$(uname)" = 'Darwin' ]; then
