--- a/nixos/.flake/home/fonts.org
+++ b/nixos/.flake/home/fonts.org
@@ -1,3 +1,7 @@
+#+title: Font Configuration
+
+Install fonts necessary for my configuration.
+#+begin_src nix :tangle ~/.flake/home/fonts.nix :mkdirp yes
 { config, pkgs, ... }:
 
 {
@@ -7,3 +11,4 @@
     (pkgs.nerdfonts.override { fonts = [ "SourceCodePro" ]; })
   ];
 }
+#+end_src
