--- a/nixos/.flake/home/programs/ncmpcpp.org
+++ b/nixos/.flake/home/programs/ncmpcpp.org
@@ -1,3 +1,7 @@
+#+title: =ncmpcpp= Configuration
+
+Enable =vi=-like controls and specify directories and MPD address.
+#+begin_src nix :tangle ~/.flake/home/programs/ncmpcpp.nix :mkdirp yes
 { config, pkgs, ... }:
 
 {
@@ -21,3 +25,4 @@
     };
   };
 }
+#+end_src
