--- a/nixos/.flake/home/programs/foot.org
+++ b/nixos/.flake/home/programs/foot.org
@@ -1,3 +1,7 @@
+#+title: Foot Terminal Configuration
+
+Specify my font and colour scheme for =foot=.
+#+begin_src nix :tangle ~/.flake/home/programs/foot.nix :mkdirp yes
 { config, pkgs, ... }:
 
 {
@@ -35,3 +39,4 @@
     };
   };
 }
+#+end_src
