--- a/nixos/.flake/system/core.org
+++ b/nixos/.flake/system/core.org
@@ -1,7 +1,7 @@
-# Edit this configuration file to define what should be installed on
-# your system. Help is available in the configuration.nix(5) man page, on
-# https://search.nixos.org/options and in the NixOS manual (`nixos-help`).
+#+title: System Core
 
+This file imports various system configuration components in addition to enabling flakes and defining the system version.
+#+begin_src nix :tangle ~/.flake/system/core.nix :mkdirp yes
 { config, lib, pkgs, ... }:
 
 {
@@ -18,3 +18,4 @@
 
   system.stateVersion = "24.05";
 }
+#+end_src
