move everything but emacs into flake

--- a/nixos/.flake/home/core.org
+++ b/nixos/.flake/home/core.org
@@ -6,6 +6,7 @@ Set up home manager for my user account and import submodules.
 
   {
     imports = [
+      ./clang-format.nix
       ./cursor.nix
       ./fonts.nix
       ./hyprland.nix
