install zip/unzip

--- a/nixos/.flake/home/programs/core.org
+++ b/nixos/.flake/home/programs/core.org
@@ -39,6 +39,8 @@ This is the core of my program configuration. This file installs programs that d
       python3
       swaybg
       texliveFull
+      unzip
+      zip
     ];
   }
 #+end_src
