--- a/nixos/.flake/home/programs/core.nix.org
+++ b/nixos/.flake/home/programs/core.nix.org
@@ -37,6 +37,7 @@ This is the core of my program configuration. This file installs programs that d
       prismlauncher # minecraft
       protonvpn-gui
       python3
+      python312Packages.python-lsp-server
       swaybg
       texliveFull
       unzip
