--- a/common/profile.org
+++ b/common/profile.org
@@ -1,7 +1,7 @@
 #+TITLE: =.profile= Settings
 Add items to the path.
 #+begin_src sh :tangle ~/.profile
-export PATH="$HOME/.local/share/fzf-zsh-plugin/bin:$HOME/node_modules/.bin:$HOME/.emacs.d/bin:$HOME/bin:$HOME/gems/bin:$HOME/.local/bin:$HOME/go/bin:/usr/local/bin:$PATH"
+export PATH="$HOME/.local/share/fzf-zsh-plugin/bin:$HOME/node_modules/.bin:$HOME/.emacs.d/bin:$HOME/bin:$HOME/gems/bin:$HOME/.local/bin:$HOME/go/bin:/usr/local/bin:/Library/TeX/texbin/:$PATH"
 #+end_src
 
 Set =GPG_TTY= on Mac OS.
