--- a/nixos/.flake/home/programs/core.nix.org
+++ b/nixos/.flake/home/programs/core.nix.org
@@ -34,15 +34,19 @@ This is the core of my program configuration. This file installs programs that d
       mpv
       networkmanagerapplet
       obs-studio
+      openresolv
+      openvpn
       pavucontrol
       prismlauncher # minecraft
-      protonvpn-gui
       python3
       python312Packages.python-lsp-server
+      qbittorrent
+      retroarchFull
       swaybg
       texliveFull
       unzip
       zip
+      zotero
     ];
   }
 #+end_src
