--- a/nixos/.flake/flake.nix.org
+++ b/nixos/.flake/flake.nix.org
@@ -1,7 +1,7 @@
 #+title: Flake Root
 
 I use the unstable branch of =nixpkgs=. This file defines the outputs for my configuration (system and home).
-#+begin_src nix :tangle ~/.flake/flake.nix :mkdirp yes
+#+begin_src nix
   {
     description = "My NixOS Configuration";
 
@@ -25,7 +25,7 @@ I use the unstable branch of =nixpkgs=. This file defines the outputs for my con
   	          home-manager.backupFileExtension = "bak";
   	          home-manager.useGlobalPkgs = true;
   	          home-manager.useUserPackages = true;
-  	          home-manager.users.jane = import ./home/core.nix;
+  	          home-manager.users.jjanzen = import ./home/core.nix;
   	        }
         ];
       };
