begin nix migration for mac

--- a/common/.flake/home/programs/emacs/core.nix.org
+++ b/common/.flake/home/programs/emacs/core.nix.org
@@ -1,10 +1,11 @@
 #+title: Emacs Configuration
 
-#+begin_src nix :tangle ~/.flake/home/programs/emacs/core.nix :mkdirp yes
+#+begin_src nix
   { config, pkgs, ... }:
 
   {
     home.file = {
+      "./.config/emacs/init.el".source = ./init.el;
       "./.config/emacs/force-custom-file.el".source = ./force-custom-file.el;
       "./.config/emacs/package-setup.el".source = ./package-setup.el;
       "./.config/emacs/user-interface.el".source = ./user-interface.el;
@@ -13,13 +14,6 @@
     };
     programs.emacs = {
       enable = true;
-      extraConfig = ''
-        (load "~/.config/emacs/force-custom-file.el")
-        (load "~/.config/emacs/package-setup.el")
-        (load "~/.config/emacs/user-interface.el")
-        (load "~/.config/emacs/tools.el")
-        (load "~/.config/emacs/languages.el")
-      '';
     };
   }
 #+end_src
