--- a/nixos/.flake/home/cursor.nix.org
+++ b/nixos/.flake/home/cursor.nix.org
@@ -1,13 +1,1 @@
-#+title: Cursor Configuration
-
-Use =vanilla-dmz= cursor size 16.
-#+begin_src nix :tangle ~/.flake/home/cursor.nix :mkdirp yes
-{ config, pkgs, ... }:
-
-{
-  home.file.".icons/default".source = "${pkgs.vanilla-dmz}/share/icons/Vanilla-DMZ";
-  xresources.properties = {
-    "Xcursor.size" = 16;
-  };
-}
-#+end_src
+../../../common/.flake/home/cursor.nix.org
