--- a/nixos/.flake/home/programs/hyprlock.nix.org
+++ b/nixos/.flake/home/programs/hyprlock.nix.org
@@ -1,42 +1,1 @@
-#+title: Hyprlock Configuration
-
-Place a textbox in the middle of the screen and use my blurred wallpaper as the background when locking.
-#+begin_src nix :tangle ~/.flake/home/programs/hyprlock.nix :mkdirp yes
-  { config, pkgs, ... }:
-
-  {
-    programs.hyprlock = {
-      enable = true;
-      settings = {
-        general = {
-          disable_loading_bar = true;
-  	      grace = 0;
-  	      hide_cursor = true;
-  	      no_fade_in = false;
-        };
-        background = [
-          {
-  	        path = "~/.wallpaper";
-  	        blur_passes = 3;
-  	        blur_size = 8;
-  	      }
-        ];
-        input-field = [
-          {
-  	        size = "200, 50";
-  	        position = "0, -80";
-  	        monitor = "";
-  	        dots_center = true;
-  	        fade_on_empty = false;
-            font_color = "rgb(202, 211, 245)";
-            inner_color = "rgb(91, 96, 120)";
-            outer_color = "rgb(24, 25, 38)";
-  	        outline_thickness = 5;
-  	        placeholder_text = "<span foreground=\"##cad3f5\">Password...</span>";
-  	        shadow_passes = 2;
-  	      }
-        ];
-      };
-    };
-  }
-#+end_src
+../../../../common/.flake/home/programs/hyprlock.nix.org
