--- a/nixos/.flake/home/programs/ssh.nix.org
+++ b/nixos/.flake/home/programs/ssh.nix.org
@@ -1,13 +1,1 @@
-#+title: SSH Configuration
-
-Add keys to SSH agent.
-#+begin_src nix :tangle ~/.flake/home/programs/ssh.nix :mkdirp yes
-{ config, pkgs, ... }:
-
-{
-  programs.ssh = {
-    enable = true;
-    addKeysToAgent = "yes";
-  };
-}
-#+end_src
+../../../../common/.flake/home/programs/ssh.nix.org
