--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -16,7 +16,6 @@
     home.packages = with pkgs; [
       aspell
       bash-language-server
-      inetutils
       choose-gui
       clang-tools
       cmake
@@ -25,6 +24,8 @@
       gcc-arm-embedded
       htop
       hyfetch
+      inetutils
+      ispell
       marksman
       mpv
       openocd
